# transfermarkt-scrapper

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  scrap.py  scrapy.cfg  transfermarkt-transfers.ipynb
migrations/versions/: 19383297ecea_create_new_transfer_table.py  73bd153d6716_logs_for_page_scrapped.py  7b663d32f7e7_more_fields_for_transfers_table.py  b4a71e6cbbea_more_fields_2_for_transfers_table.py  dddc92cf0023_create_transfers_table.py
tests/: test_transfermarkt_scrapper_api.py
transfermarkt_scrapper/: items.py  middlewares.py  pipelines.py  settings.py.backup
transfermarkt_scrapper/results/: .gitignore
transfermarkt_scrapper/spiders/: huge_transfers.py  huge_transfers_nojs.py  new_transfers.py  test_spider.py  transfers.py  transfers_nojs.py
transfermarkt_scrapper/transfermarkt_scrapper/: .gitignore  pipelines.py  settings.py
transfermarkt_scrapper/transfermarkt_scrapper/spiders/: new_transfers.py
transfermarkt_scrapper_api/: myspider.py  quotes_spider.py
