[tool.poetry]
name = "transfermarkt-scrapper-api"
version = "0.1.0"
description = ""
authors = ["Dendi Handian <handian.dendi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"
autopep8 = "^1.5.7"
scrapy-splash = "^0.7.2"
alembic = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
